# car_api

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  404.html  Dockerfile  Dockerfile.mkdocs  README.md  alembic.ini  car.db  docker-compose.yml  index.html  mkdocs.yml  openapi.json  pyproject.toml  requirements.txt  requirements_docs.txt
api-endpoints/: index.html
authentication/: index.html
car_api/: app.py  database.py  models.py  routers.py  schemas.py
car_api/core/: database.py  security.py  settings.py
car_api/models/: __init__.py  cars.py  users.py
car_api/routers/: auth.py  brands.py  cars.py  users.py
car_api/schemas/: auth.py  brands.py  cars.py  users.py
configuration/: index.html
contributing/: index.html
deployment/: index.html
development/: index.html
docs/: api-endpoints.md  authentication.md  configuration.md  contributing.md  deployment.md  development.md  guidelines.md  index.md  installation.md  overview.md  prerequisites.md  release-notes.md  structure.md  system-modeling.md  testing.md
guidelines/: index.html
installation/: index.html
kubernetes/charts/car-api/: Chart.yaml  values-aws.yaml  values-local.yaml
kubernetes/charts/car-api-mkdocs/: Chart.yaml  values-local.yaml
kubernetes/charts/car-api-mkdocs/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
kubernetes/charts/car-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  externalsecret.yaml  hpa.yaml  ingress.yaml  service-rds.yaml  (+2 more)
kubernetes/kind/: README.md  config.yml
kubernetes/static/: README.md  deployment.yaml  externalsecret.yaml  ingress.yaml  postgres.yaml  rds.yaml  secret.yaml  service.yaml
migrations/: env.py
migrations/versions/: 00287f1084b4_alter_brand_car_relation.py  d519a757c476_create_tables.py  eca29048159c_create_cars_table.py
overview/: index.html
prerequisites/: index.html
release-notes/: index.html
search/: search_index.json
structure/: index.html
system-modeling/: index.html
terraform/: addons.tf  ecr.tf  eks.tf  flux.tf  local.tf  network.tf  oidc.tf  output.tf  rds.tf  route53.tf  terraform.tf
testing/: index.html
tests/: conftest.py  test_auth.py  test_brands.py  test_cars.py  test_database.py  test_db.py  test_models.py  test_routers.py  test_schemas.py  test_users.py
