[project]
name = "Car API"
version = "0.1.0"
description = ""
authors = [
    {name = "PycodeBR",email = "pycodebr@gmail.com"}
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'
